Configuring Surefire for samples when running on Java 9
See gh-7226